# nattes

./: .gitignore  Cargo.toml  LICENSE  TODO.md
.github/workflows/: rust-clippy.yaml  rust.yaml
nattes/: Cargo.toml  README.md
nattes-lib/: Cargo.toml
nattes-lib/src/: lib.rs
nattes/src/: lib.rs  tests.rs
