[package]
name = "nattes"
version = "0.1.0"
edition = "2021"
publish = true

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["sync"] }
futures = "0"
thiserror = { version = "2" }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.94"